--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "php": ">=7.3.0"
+        "php": "^8.1",
+        "illuminate/support": "^10.0|^11.0"
     },
     "autoload": {
         "psr-4": {
