Added laravel/pint and applied Pint style fixes

--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,8 @@
                 "Eelcol\\LaravelCountryIso\\ServiceProvider"
             ]
          }
-     }
+     },
+    "require-dev": {
+        "laravel/pint": "^1.18"
+    }
 }
